--- a/src/layouts/styles/themes/default.scss
+++ b/src/layouts/styles/themes/default.scss
@@ -1,8 +1,7 @@
-:root{
-    --base-bg-color:#FFF;
+:root {
+    --base-bg-color: #fff;
     --base-text-color: #333;
-     /**
+    /**
      * 侧边栏全局颜色变量    
      */
-
 }
