--- a/src/styles/elementplus/el-dialog.scss
+++ b/src/styles/elementplus/el-dialog.scss
@@ -1,28 +1,25 @@
 .el-overlay.dialog-fade-enter-active {
-    animation-duration: .6s;
-    
-    .el-overlay-dialog{
-        animation-duration: .6s;
+    animation-duration: 0.6s;
+
+    .el-overlay-dialog {
+        animation-duration: 0.6s;
     }
 
-    .el-dialog{
+    .el-dialog {
         animation-name: backInUp;
-        animation-duration: .6s;
+        animation-duration: 0.6s;
     }
 }
 
 .el-overlay.dialog-fade-leave-active {
-    animation-duration: .6s;
-    
-    .el-overlay-dialog{
-        animation-duration: .6s;
+    animation-duration: 0.6s;
+
+    .el-overlay-dialog {
+        animation-duration: 0.6s;
     }
 
-    .el-dialog{
+    .el-dialog {
         animation-name: backOutDown;
-        animation-duration: .6s;
+        animation-duration: 0.6s;
     }
 }
-
-
-
