滚动条处理

--- a/src/styles/themes/index.scss
+++ b/src/styles/themes/index.scss
@@ -1,2 +1,7 @@
-@import './dark/css-vars';
-@import './default/css-vars';
+@import './dark/';
+@import './default/';
+
+html {
+    body {
+    }
+}
