--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,60 @@
+@import './base';
 @import './elementplus';
 @import './themes/index';
+
+/**main**/
+#app {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 1rem;
+
+    font-weight: normal;
+}
+
+a,
+.green {
+    text-decoration: none;
+    color: hsla(160, 100%, 37%, 1);
+    transition: 0.4s;
+}
+
+@media (hover: hover) {
+    a:hover {
+        background-color: hsla(160, 100%, 37%, 0.2);
+    }
+}
+
+@media (min-width: 1024px) {
+    /* body {
+        display: flex;
+        place-items: center;
+    }
+
+    #app {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 0 2rem;
+    } */
+}
+
+// 滚动条整体样式
+::-webkit-scrollbar {
+    width: 7px; // 高宽分别对应横竖滚动条的尺寸
+    height: 5px;
+}
+// 滚动条里面小方块
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    background: #e5e5e5;
+}
+// 滚动条里面轨道
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background: #ffffff;
+}
+// 滚动条上下的箭头按钮
+::-webkit-scrollbar-button {
+    display: none;
+}
