--- a/src/styles/themes/dark/css-vars.css
+++ b/src/styles/themes/dark/css-vars.css
@@ -1,8 +1,9 @@
 /**
-elementplus变量
+全局变量
 **/
 html.dark {
     color-scheme: dark;
+    --bg-color: #141414;
     --el-color-primary: #409eff;
     --el-color-primary-light-3: #3375b9;
     --el-color-primary-light-5: #2a598a;
@@ -73,6 +74,9 @@ html.dark {
     --el-fill-color-blank: transparent;
     --el-mask-color: rgba(0, 0, 0, 0.8);
     --el-mask-color-extra-light: rgba(0, 0, 0, 0.3);
+}
+html.dark body {
+    --bg-color: #141414;
 }
 html.dark .el-button {
     --el-button-disabled-text-color: rgba(255, 255, 255, 0.5);
