--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -11,6 +11,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    line-height: 1.5;
+    font-size: 16px;
     font-weight: normal;
 }
 
