--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -16,27 +16,27 @@
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 2rem;
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 h3 {
-    font-size: 1.17em;
+    font-size: 1.17rem;
 }
 
 h4 {
-    font-size: 1em;
+    font-size: 1rem;
 }
 
 h5 {
-    font-size: 0.83em;
+    font-size: 0.83rem;
 }
 
 h6 {
-    font-size: 0.67em;
+    font-size: 0.67rem;
 }
 
 body {
