--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,10 +4,9 @@
 
 /**main**/
 #app {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 1rem;
-
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     font-weight: normal;
 }
 
