--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -58,6 +58,8 @@ body {
         'Fira Sans',
         'Droid Sans',
         'Helvetica Neue',
+        '微软雅黑',
+        'Mcrosoft yahei',
         sans-serif;
     font-size: 16px;
     text-rendering: optimizeLegibility;
